# noa

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THREAT-MODEL-ADDENDUM.md  THREAT-MODEL.md  VERSIONING.md  _cose-interop-vector.json  _cose_interop_verify.py  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
conformance/: MATRIX.md
docs/: PQ-TRANSITION-SPEC.md  SECURITY-AUDIT-2026-07-18.html  SECURITY-READINESS.md  co-attestation.md  draft-noa-receipt-00.md  federation-spec.md  metrics.md  receipt-spec.md  security-risk-register.md  trust-root-checklist.md
examples/: README.md  killer-demo.mjs
impl-csharp/: README.md  conformance.sh  impl-csharp.csproj
impl-go/: .gitignore  README.md  conformance_test.sh  go.mod  jcs.go  jcs_test.go  keys.go  main.go  parse.go  value.go  verify.go
impl-py/: README.md  conformance.mjs  noa_verify.py
impl-rust/: Cargo.toml  conformance.sh
impl-rust/src/: jcs.rs  json.rs  keys.rs  main.rs  schema.rs  verify.rs
schema/: noa-receipt-0.1.schema.json
scripts/: bench.mjs  conformance-matrix.mjs  gen-federation-vectors.ts  gen-golden-vectors.mjs  gen-l2-vectors.ts  gen-vectors.ts  lint-published-surface.mjs  noa-metrics.mjs
src/: builder.ts  canonicalize.ts  cli.ts  hash.ts  index.ts  jcs.ts  keys.ts  pii.ts  safe-json.ts  schema.ts  signing.ts  types.ts  verify.ts
test/: builder-async.test.ts  builder.test.ts  cli.test.ts  golden-backcompat.test.ts  identity-binding.test.ts  jcs.test.ts  keys.test.ts  (+4 more)
(+86 files in other folders)
